environments/coolstore-catalog-dev/apps/app-coolstore-catalog/services/coolstore-catalog/base/300-deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      ["catalog-database",{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catalog-database"}]
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/adnan-drina/coolstore-catalog.git
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/component: spring-boot-service
    app.kubernetes.io/instance: coolstore-catalog-dev
    app.kubernetes.io/part-of: coolstore-catalog
    app.openshift.io/runtime: spring
  name: catalog
  namespace: coolstore-catalog-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: catalog
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: catalog
    spec:
      containers:
      - env:
        - name: JAVA_OPTS_APPEND
          value: -Dspring.profiles.active=openshift-dev
        image: image-registry.openshift-image-registry.svc:5000/coolstore-catalog-dev/catalog:latest
        imagePullPolicy: Always
        name: catalog
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 15
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - catalog
      from:
        kind: ImageStreamTag
        name: catalog:latest
    type: ImageChange
