environments/coolstore-catalog-dev/apps/app-coolstore-catalog/services/coolstore-catalog/base/400-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: coolstore-catalog
    app.kubernetes.io/component: spring-boot-service
    app.kubernetes.io/instance: coolstore-catalog-dev
  name: catalog
  namespace: coolstore-catalog-dev
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
#  - name: metrics
#    port: 8080
#    protocol: TCP
#    targetPort: 8080
  selector:
    deploymentconfig: catalog
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
